--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "siteTitle": "Healthy Recipes Blog",
+  "siteTitle": "Sweet & Healthy by Camila",
   "addRecipe": "Add recipe",
   "edit": "Edit",
   "delete": "Delete",
