--- a/locales/es.json
+++ b/locales/es.json
@@ -1,5 +1,5 @@
 {
-  "siteTitle": "Blog de recetas saludables",
+  "siteTitle": "Dulce & Saludable by Camila",
   "addRecipe": "Agregar receta",
   "edit": "Editar",
   "delete": "Eliminar",
